# text

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
LightsOff/: main.cpp
LightsOff/include/: board.hpp  game.hpp
Minesweeper/: game.cpp  main.cpp
Minesweeper/include/: board.hpp  game.hpp  launch.hpp
base/: mkd.cpp  png.cpp
base/include/: mkd.hpp  png.hpp  vasdef.hpp
code/: mkd.cpp  png.cpp
code/include/: png.hpp  vasdef.hpp
gl/: main.cpp
gl/include/: base.hpp  util.hpp
render/: main.cpp
render/include/: DrawBoard.hpp  font.hpp  main.hpp  text.hpp  ttf.hpp  util.hpp  window.hpp
rhythm/: main.cpp
rhythm/include/: shape.hpp
testcase/: CMakeLists.txt  main.cpp  ttf.hpp  util.hpp  window.hpp
vk/: vk.cpp
